service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mydep
  name: mydep
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: mydep
  type: NodePort
