ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mydep-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: managed-cert
    networking.gke.io/v1beta1.FrontendConfig: "pallavi-https-redirect"
    kubernetes.io/ingress.global-static-ip-name: ingress-ip
spec:
  rules:
  - host: www.dikshantmali.ga
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mydep
            port:
              number: 80
